code refactoring of sprint3, added buttons to gui, TODO: connect buttons to backend, fix MonitoringDevice

--- a/gui_frontend_sprint3/src/App.css
+++ b/gui_frontend_sprint3/src/App.css
@@ -50,7 +50,11 @@
 }
 
 .App > .right-div > .info-div{
-  height:80%;
+  height:60%;
+}
+
+.App > .right-div > .control-div{
+  height: 20%;
 }
 
 .App > .right-div > .service-area-iframe{
